<resources>
    <string name="app_name">TestEmbedding</string>
    <string translatable="false" name="start_flutter_activity">Flutter Activity</string>
    <string translatable="false" name="start_pre_warmed_flutter_activity">PreWarmed Flutter Activity</string>
    <string translatable="false" name="next">Далее</string>
    <string translatable="false" name="start_flutter_fragment">Flutter Fragment</string>
    <string translatable="false" name="start_pre_warmed_flutter_fragment_white">PreWarmed Flutter Fragment (WHITE)</string>
    <string translatable="false" name="start_pre_warmed_flutter_fragment_blue">PreWarmed Flutter Fragment (BLUE)</string>
    <string translatable="false" name="start_flutter_view_white">Flutter View</string>
    <string translatable="false" name="answer_label">Здесь будет ответ от Flutter</string>
</resources>