<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="100dp"
    tools:context=".MainActivity"
    android:background="?attr/backgroundColor"
    >

    <Button
        android:id="@+id/btnStartFlutterActivity"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:text="@string/start_flutter_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnStartPreWarmedFlutterActivity"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:text="@string/start_pre_warmed_flutter_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnStartFlutterActivity" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnStartPreWarmedFlutterActivity" />


</androidx.constraintlayout.widget.ConstraintLayout>